Updated resume, updated About section content, fixed spacing bug in footer, updated copyright date

--- a/css/shared.css
+++ b/css/shared.css
@@ -633,7 +633,7 @@ footer > #social-links > a:hover {
     }
     
     #copyright {
-        width: 284.77px;
+        width: 285px;
         margin-bottom: 20px;
     }
 }
